--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,28 @@ dropbox.py
 *.exe
 *.pqlog
 *.pic
-_pycache_/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
 JennyDB.xml
 temp*
 serial.txt
 *.spec
 settings.py
-__pycache__/loguploaderservice.cpython-310.pyc
-__pycache__/loguploader.cpython-310.pyc
+
+# file change markers created by has_file_changed()
+*.lastcheck
+
+# optional: local virtual envs
+.venv/
+venv/
+.python-version
+
+# optional: editor settings
+.vscode/
+.idea/
+
+# optional: generated XML copies (uncomment if you don't want them in git)
+# *.db.xml
+# *.conf.xml
