chore: ignore PyInstaller temp dirs and standard Python artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@ venv/
 .vscode/
 .idea/
 
+# PyInstaller temp runtime dirs (prevent _MEI* from being tracked)
+_MEI*/
+
 # optional: generated XML copies (uncomment if you don't want them in git)
 # *.db.xml
 # *.conf.xml
