ci: upload Inno Setup Output installer artifact

--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -63,4 +63,5 @@ jobs:
           name: windows-artifacts
           path: |
             dist\\loguploaderservice.exe
+            Output\\*.exe
             *.exe
